<resources>
    <string name="app_name">DemoApp</string>
    <string name="arfcn">ARFCN</string>
    <string name="channelNumber">-</string>
    <string name="bsic">BSIC</string>
    <string name="rxLev">RxLev</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="bsicValue">-</string>
    <string name="rxLevValue">-</string>
    <string name="c1Value">-</string>
    <string name="c2Value">-</string>
    <string name="servingCell">Serving Cell</string>
    <string name="mcc">MCC</string>
    <string name="mccValue">-</string>
    <string name="mnc">MNC</string>
    <string name="mncValue">-</string>
    <string name="cid">CID</string>
    <string name="cidValue">-</string>
    <string name="lacValue">-</string>
    <string name="lac">LAC</string>
    <string name="networkOperator">Free</string>
    <string name="cellState">-</string>
</resources>
