<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/cellState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cellState"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/channelNumber"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/channelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/channelNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bsicNumber"
        app:layout_constraintStart_toEndOf="@id/cellState"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bsicNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bsicValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rxLevel"
        app:layout_constraintStart_toEndOf="@id/channelNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rxLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rxLevValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/c1Number"
        app:layout_constraintStart_toEndOf="@id/bsicNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/c1Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/c1Value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/c2Number"
        app:layout_constraintStart_toEndOf="@id/rxLevel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/c2Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/c2Value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/c1Number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cidTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cid"
        app:layout_constraintStart_toStartOf="@id/c1Number"
        app:layout_constraintTop_toBottomOf="@id/c1Number"/>

    <TextView
        android:id="@+id/cidNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cidValue"
        app:layout_constraintBottom_toBottomOf="@id/cidTitle"
        app:layout_constraintStart_toEndOf="@id/cidTitle"
        app:layout_constraintTop_toTopOf="@id/cidTitle" />
</android.support.constraint.ConstraintLayout>